; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_content_encoding.c_identity_unencode_write.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_content_encoding.c_identity_unencode_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, %struct.TYPE_3__*, i8*, i64)* @identity_unencode_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @identity_unencode_write(%struct.connectdata* %0, %struct.TYPE_3__* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.connectdata*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.connectdata* %0, %struct.connectdata** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.connectdata*, %struct.connectdata** %5, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @Curl_unencode_write(%struct.connectdata* %9, i32 %12, i8* %13, i64 %14)
  ret i32 %15
}

declare dso_local i32 @Curl_unencode_write(%struct.connectdata*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
